# pravni-vodnik-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/agents/: answer_generator.py  answer_generator_agent.py  concept_expansion_agent.py  document_updater_agent.py  exact_article_agent.py  multi_query_generator.py  multi_query_generator_agent.py  query_classifier_agent.py  synthesizer_agent.py
app/data/: graph_visualization.ipynb  laws_metadata.ipynb  legal_text_ingestion.ipynb  preprocess.ipynb  retrain_bm25.ipynb  scrape_zkp.js  upload_docs.ipynb
app/data/zkp/: articles.json  store_articles_to_mongo.ipynb
app/database/: bm25_model.json  mongo.py  vector_store.py
app/evals/multi_query_agent/: multi_query_generator_agent.py  test_queries.py
app/graphs/: query_graph.py
app/llms/: embedding_model.py
app/models/: Article.py  Document.py  GraphState.py  Issue.py  Law.py  LawId.py  QueryType.py  events.py
app/utils/: create_sse.py  dedupe_queries.py
scripts/ustava/: preprocess.ipynb
