[project]
name = "pravni-vodnik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.5",
    "langchain-text-splitters>=1.1.0",
    "pinecone>=8.0.0",
    "pinecone-text>=0.11.0",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.1",
]
